[gd_scene load_steps=53 format=2]

[ext_resource path="res://Assets/GFX/Frog/Idle/tile004.png" type="Texture" id=1]
[ext_resource path="res://Assets/GFX/Frog/Idle/tile005.png" type="Texture" id=2]
[ext_resource path="res://Assets/GFX/Frog/Idle/tile006.png" type="Texture" id=3]
[ext_resource path="res://Assets/GFX/Frog/Idle/tile003.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/Frog/Idle/tile001.png" type="Texture" id=5]
[ext_resource path="res://Assets/GFX/Frog/Idle/tile002.png" type="Texture" id=6]
[ext_resource path="res://Assets/GFX/Frog/Idle/tile000.png" type="Texture" id=7]
[ext_resource path="res://Assets/GFX/Frog/Idle/tile008.png" type="Texture" id=8]
[ext_resource path="res://Assets/GFX/Frog/Idle/tile007.png" type="Texture" id=9]
[ext_resource path="res://Assets/GFX/Frog/Idle/tile010.png" type="Texture" id=10]
[ext_resource path="res://Assets/GFX/Frog/Idle/tile009.png" type="Texture" id=11]
[ext_resource path="res://Assets/GFX/Frog/Run/tile001.png" type="Texture" id=12]
[ext_resource path="res://Assets/GFX/Frog/Jump (32x32).png" type="Texture" id=13]
[ext_resource path="res://Assets/GFX/Frog/Run/tile004.png" type="Texture" id=14]
[ext_resource path="res://Assets/GFX/Frog/Run/tile002.png" type="Texture" id=15]
[ext_resource path="res://Assets/GFX/Frog/Run/tile000.png" type="Texture" id=16]
[ext_resource path="res://Assets/GFX/Frog/Fall (32x32).png" type="Texture" id=17]
[ext_resource path="res://Assets/GFX/Frog/Run/tile005.png" type="Texture" id=18]
[ext_resource path="res://Assets/GFX/Frog/Run/tile006.png" type="Texture" id=19]
[ext_resource path="res://Assets/GFX/Frog/Run/tile011.png" type="Texture" id=20]
[ext_resource path="res://Assets/GFX/Frog/Run/tile009.png" type="Texture" id=21]
[ext_resource path="res://Assets/GFX/Frog/Run/tile007.png" type="Texture" id=22]
[ext_resource path="res://Assets/GFX/Frog/Run/tile008.png" type="Texture" id=23]
[ext_resource path="res://Assets/GFX/Frog/Run/tile010.png" type="Texture" id=24]
[ext_resource path="res://Assets/GFX/Frog/Run/tile003.png" type="Texture" id=25]
[ext_resource path="res://Sence/Tutorial/TutorialFrog.gd" type="Script" id=26]
[ext_resource path="res://Assets/GFX/kenney_particle_pack/smoke_07.png" type="Texture" id=27]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.2

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.0280899, 0.116379 ), 0.0, 0.0, 0, 0, Vector2( 0.990741, 0.659483 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.604027, 1 )
colors = PoolColorArray( 1, 0.805664, 0.222656, 1, 0.539062, 0.404297, 0, 1, 1, 1, 1, 0.317647 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 25 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 20 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 11.347

[sub_resource type="CapsuleShape2D" id=6]
radius = 11.4353
height = 4.83113

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fall" ]
}

[sub_resource type="Animation" id=9]
length = 0.55
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/dead/node = SubResource( 12 )
states/dead/position = Vector2( 590, 223 )
states/fall/node = SubResource( 13 )
states/fall/position = Vector2( 224, 242 )
states/idle/node = SubResource( 14 )
states/idle/position = Vector2( 383, 67 )
states/jump/node = SubResource( 15 )
states/jump/position = Vector2( 389, 187 )
states/run/node = SubResource( 16 )
states/run/position = Vector2( 543, 123 )
transitions = [ "idle", "run", SubResource( 17 ), "run", "jump", SubResource( 18 ), "jump", "fall", SubResource( 19 ), "idle", "dead", SubResource( 20 ), "run", "dead", SubResource( 21 ), "jump", "dead", SubResource( 22 ), "fall", "dead", SubResource( 23 ) ]
start_node = "idle"
graph_offset = Vector2( 53, 36 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[node name="Frog" type="RigidBody2D" groups=[
"Frog",
]]
physics_material_override = SubResource( 1 )
script = ExtResource( 26 )

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_bottom = 0

[node name="Dust" type="CPUParticles2D" parent="."]
position = Vector2( 1.33635, 6.68175 )
scale = Vector2( 0.2, 0.2 )
emitting = false
amount = 1
lifetime = 0.3
one_shot = true
texture = ExtResource( 27 )
emission_shape = 2
emission_rect_extents = Vector2( 20, 1 )
gravity = Vector2( -90, -10 )
initial_velocity = 20.0
angular_velocity = 20.0
angular_velocity_random = 1.0
linear_accel = 200.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "idle"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.211637, 3.85112 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="FrogArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrogArea"]
position = Vector2( -0.0837735, 3.61103 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 7 )
anims/fall = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/jump = SubResource( 10 )
anims/run = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 24 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 25 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="FrogArea" to="." method="_on_FrogArea_area_entered"]
[connection signal="body_entered" from="FrogArea" to="." method="_on_FrogArea_body_entered"]
[connection signal="body_exited" from="FrogArea" to="." method="_on_FrogArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
